Changes to optmise code
The code was refactored for peak detection and for dragging points on the interface. This version provides a more reliable peak detection.

--- a/EzyScore.ipynb
+++ b/EzyScore.ipynb
@@ -6,7 +6,8 @@
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -16,6 +17,20 @@
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3768ca30c9be495f89d0b7f534b655a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='', description='String:', layout=Layout(width='350px'), placeholder='Paste t…"
       ]
      },
      "metadata": {},
@@ -56,135 +71,112 @@
     "# 1/50Hz = 0.02 = \"20L\"\n",
     "\n",
     "SAMPLE_RATE_STRING = '20L' # equivalent to 50Hz. \n",
-    "PEAK_DET_THRESHOLD = .02\n",
+    "PEAK_DET_THRESHOLD = 0.01 #.02\n",
     "DIFF_TRSHD = .001\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
     "\n",
-    "OFFSET = 0.02\n",
+    "PLOT_OFFSET = 0.02\n",
     "\n",
-    "def peakdet(df, interval_offset, delta, x=None):    \n",
+    "\n",
+    "def peak_detection_and_cleaning(df, interval_offset, delta, x=None):    \n",
     "    \"\"\"\n",
-    "    Converted from MATLAB script at http://billauer.co.il/peakdet.html\n",
-    "    \n",
-    "    Returns two arrays\n",
-    "    \n",
-    "    function [maxtab, mintab]=peakdet(v, delta, x)\n",
-    "    %PEAKDET Detect peaks in a vector\n",
-    "    %        [MAXTAB, MINTAB] = PEAKDET(V, DELTA) finds the local\n",
-    "    %        maxima and minima (\"peaks\") in the vector V.\n",
-    "    %        MAXTAB and MINTAB consists of two columns. Column 1\n",
-    "    %        contains indices in V, and column 2 the found values.\n",
-    "    %      \n",
-    "    %        With [MAXTAB, MINTAB] = PEAKDET(V, DELTA, X) the indices\n",
-    "    %        in MAXTAB and MINTAB are replaced with the corresponding\n",
-    "    %        X-values.\n",
-    "    %\n",
-    "    %        A point is considered a maximum peak if it has the maximal\n",
-    "    %        value, and was preceded (to the left) by a value lower by\n",
-    "    %        DELTA.\n",
-    "    \n",
-    "    % Eli Billauer, 3.4.05 (Explicitly not copyrighted).\n",
-    "    % This function is released to the public domain; Any use is allowed.\n",
-    "    \n",
+    "    Converted and adapted from MATLAB script at http://billauer.co.il/peakdet.html\n",
     "    \"\"\"\n",
     "\n",
     "    max_tab = []\n",
     "    min_tab = []\n",
     "    \n",
-    "    cropped_df = df.loc[interval_offset:interval_offset + SAMPLE_RATE*4] # 3 was the original value\n",
-    "    cropped_df = cropped_df.reset_index(drop=True)\n",
-    "\n",
-    "    data = cropped_df['Skin conductance']\n",
+    "    if interval_offset == SAMPLE_RATE*8:\n",
+    "        cropped_df = df.loc[interval_offset:interval_offset + SAMPLE_RATE*4].reset_index(drop=True) # 3 was the original value\n",
+    "    else:    \n",
+    "        cropped_df = df.loc[interval_offset:interval_offset + SAMPLE_RATE*3].reset_index(drop=True) # 3 was the original value\n",
+    "    data = np.asarray(cropped_df['Skin conductance'])\n",
     "       \n",
     "    if x is None:\n",
     "        x = np.arange(len(data))\n",
-    "    \n",
-    "    data = np.asarray(data)\n",
-    "    \n",
+    "        \n",
     "    mn, mx = np.Inf, -np.Inf\n",
     "    mn_pos, mx_pos = np.NaN, np.NaN\n",
     "    \n",
-    "    look_for_max = True\n",
+    "    look_for_max = False\n",
     "    \n",
-    "    for i in np.arange(len(data)):\n",
-    "\n",
+    "    for i in range(0, len(data), 5):\n",
+    "        pos = interval_offset + x[i]\n",
     "        this = data[i]\n",
+    "\n",
     "        if this > mx:\n",
     "            mx = this\n",
-    "            mx_pos = interval_offset + x[i]\n",
+    "            mx_pos = pos\n",
     "        if this < mn:\n",
     "            mn = this\n",
-    "            mn_pos = interval_offset + x[i]\n",
+    "            mn_pos = pos\n",
     "\n",
     "        if look_for_max:\n",
-    "            if this < mx-delta:\n",
+    "            if this < mx - delta:\n",
     "                max_tab.append((mx_pos, mx))\n",
     "                look_for_max = False\n",
     "\n",
     "        else:\n",
-    "            if this > mn+delta:\n",
+    "            if this > mn + delta:\n",
     "                min_tab.append((mn_pos, mn))\n",
     "                mx = this\n",
-    "                mx_pos = interval_offset + x[i]\n",
+    "                mx_pos = pos\n",
     "                look_for_max = True\n",
     "                \n",
-    "    clean_max_tab = copy.deepcopy(max_tab)\n",
-    "    clean_min_tab = copy.deepcopy(min_tab)\n",
+    "    if mx > (mn + delta):\n",
+    "        max_tab.append((mx_pos, mx))   \n",
+    "    \n",
+    "    if len(min_tab) > 0:\n",
+    "        min_tab = [min(min_tab, key=lambda x: x[1])]\n",
+    "    if len(max_tab) > 0:\n",
+    "        max_tab = [max(max_tab, key=lambda x: x[1])]\n",
+    "    \n",
+    "    clean_max_tab = max_tab[:]\n",
+    "    clean_min_tab = min_tab[:]\n",
     "    \n",
     "    if len(min_tab) == 0:\n",
     "        if len(max_tab) > 0:\n",
-    "            del clean_max_tab[0]\n",
+    "            clean_max_tab = clean_max_tab[1:]\n",
     "        provisional_value_x = interval_offset + 65\n",
-    "        provisional_value_y = cropped_df.loc[65][1]\n",
+    "        provisional_value_y = cropped_df['Skin conductance'][65]\n",
     "        clean_min_tab.append((provisional_value_x, provisional_value_y))\n",
     "        provisional_value_x = interval_offset + 85\n",
-    "        provisional_value_y = cropped_df.loc[85][1]\n",
+    "        provisional_value_y = cropped_df['Skin conductance'][85]\n",
     "        clean_max_tab.append((provisional_value_x, provisional_value_y))\n",
-    "    \n",
-    "    if len(max_tab) == 0:\n",
-    "        if len(clean_min_tab) > 0:\n",
-    "            del clean_min_tab[0]\n",
-    "        provisional_value_x = interval_offset + 65\n",
-    "        provisional_value_y = cropped_df.loc[65][1]\n",
-    "        clean_min_tab.append((provisional_value_x, provisional_value_y))\n",
-    "        provisional_value_x = interval_offset + 85\n",
-    "        provisional_value_y = cropped_df.loc[85][1]\n",
-    "        clean_max_tab.append((provisional_value_x, provisional_value_y))\n",
+    "        \n",
+    "    # Visual adjustment for the trough points visualisation\n",
+    "    if clean_min_tab[0][0] == interval_offset:\n",
+    "        if interval_offset == SAMPLE_RATE*2:\n",
+    "            pass\n",
+    "        else:            \n",
+    "            clean_min_tab = clean_min_tab[1:]\n",
+    "            provisional_value_x = interval_offset + 3\n",
+    "            provisional_value_y = cropped_df['Skin conductance'][3]\n",
+    "            clean_min_tab.append((provisional_value_x, provisional_value_y))\n",
     "\n",
-    "    # addressing when the peak is detected before the trough\n",
-    "    if clean_max_tab[0][1] >= clean_min_tab[0][1]:\n",
-    "        del clean_max_tab[0]\n",
-    "\n",
-    "        if len(clean_max_tab) == 0:\n",
-    "            provisional_value_x = interval_offset + 85\n",
-    "            provisional_value_y = cropped_df.loc[85][1]\n",
-    "            clean_max_tab.append((provisional_value_x,provisional_value_y))\n",
+    "    # Visual adjustment for the peak points visualisation    \n",
+    "    if clean_max_tab[0][0] == (interval_offset + SAMPLE_RATE*3):\n",
+    "        if interval_offset == SAMPLE_RATE*8:\n",
+    "            pass\n",
+    "        else:\n",
+    "            clean_max_tab = clean_max_tab[1:]\n",
+    "            provisional_value_x = (interval_offset + SAMPLE_RATE*3) - 3\n",
+    "            provisional_value_y = cropped_df['Skin conductance'][(SAMPLE_RATE*3) - 3]\n",
+    "            clean_max_tab.append((provisional_value_x, provisional_value_y))\n",
     "    \n",
     "    if clean_min_tab[0][0] >= clean_max_tab[0][0]:\n",
-    "        del clean_max_tab[0]\n",
-    "        del clean_min_tab[0]\n",
+    "        clean_max_tab = clean_max_tab[1:]\n",
+    "        clean_min_tab = clean_min_tab[1:]\n",
     "    \n",
     "        provisional_value_x = interval_offset + 65\n",
-    "        provisional_value_y = cropped_df.loc[65][1]\n",
+    "        provisional_value_y = cropped_df['Skin conductance'][65]\n",
     "        clean_min_tab.append((provisional_value_x, provisional_value_y))\n",
     "        provisional_value_x = interval_offset + 85\n",
-    "        provisional_value_y = cropped_df.loc[85][1]\n",
+    "        provisional_value_y = cropped_df['Skin conductance'][85]\n",
     "        clean_max_tab.append((provisional_value_x, provisional_value_y))\n",
-    "    \n",
-    "    if len(clean_min_tab) > len(clean_max_tab):\n",
-    "        del clean_min_tab[-1]\n",
-    "    \n",
-    "    if len(clean_max_tab) > len(clean_min_tab):\n",
-    "        del clean_max_tab[-1]\n",
-    "    \n",
-    "    if len(clean_min_tab) > 1:\n",
-    "        for k in range(len(clean_min_tab)):\n",
-    "            if not len(clean_min_tab) == 1:\n",
-    "                del clean_min_tab[-1]\n",
-    "                del clean_max_tab[-1]\n",
-    "        \n",
+    "\n",
     "    return np.array(clean_max_tab), np.array(clean_min_tab)\n",
     "\n",
     "\n",
@@ -199,19 +191,31 @@
     "    offset_second_interval = SAMPLE_RATE*5\n",
     "    offset_third_interval = SAMPLE_RATE*8\n",
     "    \n",
-    "    max_tab_first_interval, min_tab_first_interval = peakdet(sliced_df, offset_first_interval, PEAK_DET_THRESHOLD)\n",
+    "    max_tab_first_interval, min_tab_first_interval = peak_detection_and_cleaning(sliced_df, offset_first_interval, PEAK_DET_THRESHOLD)\n",
     "    min_tab.extend(min_tab_first_interval)\n",
     "    max_tab.extend(max_tab_first_interval)\n",
-    "    max_tab_second_interval, min_tab_second_interval = peakdet(sliced_df, offset_second_interval, PEAK_DET_THRESHOLD)\n",
+    "    max_tab_second_interval, min_tab_second_interval = peak_detection_and_cleaning(sliced_df, offset_second_interval, PEAK_DET_THRESHOLD)\n",
+    "\n",
+    "    if min_tab_second_interval[0][0] == max_tab_first_interval[0][0]:\n",
+    "        min_tab_second_interval[0][0] = min_tab_second_interval[0][0] + 3\n",
+    "        max_tab_first_interval[0][0] = max_tab_first_interval[0][0] - 3\n",
+    "\n",
+    "    # If values \"clash\" in the last section of the first interval and \n",
+    "    # first section of the second interval\n",
     "    min_tab.extend(min_tab_second_interval)\n",
     "    max_tab.extend(max_tab_second_interval)\n",
-    "    max_tab_third_interval, min_tab_third_interval = peakdet(sliced_df, offset_third_interval, PEAK_DET_THRESHOLD)\n",
+    "    max_tab_third_interval, min_tab_third_interval = peak_detection_and_cleaning(sliced_df, offset_third_interval, PEAK_DET_THRESHOLD)\n",
+    "    \n",
+    "    # If values clash in the last section of the second interval and \n",
+    "    # first section of the third interval\n",
+    "    if min_tab_third_interval[0][0] == max_tab_second_interval[0][0]:\n",
+    "        min_tab_third_interval[0][0] = min_tab_third_interval[0][0] + 3\n",
+    "        max_tab_second_interval[0][0] = max_tab_second_interval[0][0] - 3\n",
     "    min_tab.extend(min_tab_third_interval)\n",
     "    max_tab.extend(max_tab_third_interval)\n",
     "    \n",
     "    max_tab_df = pd.DataFrame(max_tab, columns=['sample', 'value'])\n",
     "    min_tab_df = pd.DataFrame(min_tab, columns=['sample', 'value'])\n",
-    "    \n",
     "    update_flag = False\n",
     "    \n",
     "    return min_tab_df, max_tab_df\n",
@@ -231,7 +235,7 @@
     "\n",
     "    if fig:\n",
     "        ax.plot(sliced_df.index, sliced_df['Skin conductance'])\n",
-    "        plt.ylim(min(sliced_df['Skin conductance']) - OFFSET, max(sliced_df['Skin conductance']) + OFFSET)\n",
+    "        plt.ylim(min(sliced_df['Skin conductance']) - PLOT_OFFSET, max(sliced_df['Skin conductance']) + PLOT_OFFSET)\n",
     "        \n",
     "        plt.axvline(x=SAMPLE_RATE, color='k', linestyle='-')\n",
     "        ax.annotate('onset', xy=(SAMPLE_RATE*2, ax.get_ylim()[1]),\n",
@@ -283,7 +287,7 @@
     "    else:\n",
     "        fig, ax = plt.subplots()\n",
     "        ax.plot(sliced_df.index, sliced_df['Skin conductance'])\n",
-    "        plt.ylim(min(sliced_df['Skin conductance']) - OFFSET, max(sliced_df['Skin conductance']) + OFFSET)\n",
+    "        plt.ylim(min(sliced_df['Skin conductance']) - PLOT_OFFSET, max(sliced_df['Skin conductance']) + PLOT_OFFSET)\n",
     "\n",
     "        plt.axvline(x=SAMPLE_RATE, color='k', linestyle='-')\n",
     "        ax.annotate('onset', xy=(SAMPLE_RATE*2, ax.get_ylim()[1]),\n",
@@ -409,15 +413,8 @@
     "        self.lines = self.ax.lines[:1]\n",
     "        self.tx = [self.ax.text(0, 0, \"\") for l in self.lines]\n",
     "        self.marker = [self.ax.plot(markers_loc[i][0], markers_loc[i][1], marker=\"o\", color=\"red\")[0]]\n",
-    "        \n",
-    "        self.spans = []\n",
-    "        for peak_n in range(len(min_markers_vars)):\n",
-    "            self.vspan = ax.axvspan(min_markers_vars[\"min_marker{}\".format(peak_n)],\n",
-    "                                    max_markers_vars[\"max_marker{}\".format(peak_n)],\n",
-    "                                    facecolor='0.5')\n",
-    "            self.spans.append(self.vspan)\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "        self.spans = [ax.axvspan(min_marker, max_marker, facecolor='0.5') for min_marker, max_marker in zip(min_markers_vars.values(), max_markers_vars.values())]\n",
     "        self.draggable = False\n",
     "\n",
     "    def connect(self):\n",
@@ -433,7 +430,6 @@
     "        contains, attrd = self.point.contains(event)\n",
     "        if not contains:\n",
     "            return\n",
-    "        #print('event contains', self.point.xy)\n",
     "        self.press = self.point.xy, (event.xdata, event.ydata)\n",
     "\n",
     "        if event.button == 1:       # left click\n",
@@ -451,7 +447,7 @@
     "            hght = round(self.update(event), 2)\n",
     "\n",
     "        self.point.set_x(x0+dx)\n",
-    "        self.point.set_height(hght + OFFSET)\n",
+    "        self.point.set_height(hght + PLOT_OFFSET)\n",
     "        self.point.figure.canvas.draw()        \n",
     "\n",
     "    def release(self, event):\n",
@@ -476,13 +472,7 @@
     "                elif max_markers_vars['max_marker{}'.format(peak_n)] == closest_x:\n",
     "                    max_markers_vars['max_marker{}'.format(peak_n)] = x\n",
     "\n",
-    "            self.spans= []\n",
-    "            for peak_n in range(len(min_markers_vars)):\n",
-    "                self.vspan = ax.axvspan(min_markers_vars[\"min_marker{}\".format(peak_n)],\n",
-    "                                             max_markers_vars[\"max_marker{}\".format(peak_n)],\n",
-    "                                             facecolor='0.5')\n",
-    "\n",
-    "                self.spans.append(self.vspan)\n",
+    "            self.spans = [self.ax.axvspan(min_marker, max_marker, facecolor='0.5') for min_marker, max_marker in zip(min_markers_vars.values(), max_markers_vars.values())]\n",
     "        \n",
     "        except NameError:\n",
     "            pass\n",
@@ -536,8 +526,8 @@
     "    for peak_idx in range(len(mintab_df['sample'])):\n",
     "        points_x.append(int(mintab_df['sample'][peak_idx]))\n",
     "        points_x.append(int(maxtab_df['sample'][peak_idx]))\n",
-    "        points_y.append(mintab_df['value'][peak_idx] + OFFSET)\n",
-    "        points_y.append(maxtab_df['value'][peak_idx] + OFFSET)\n",
+    "        points_y.append(mintab_df['value'][peak_idx] + PLOT_OFFSET)\n",
+    "        points_y.append(maxtab_df['value'][peak_idx] + PLOT_OFFSET)\n",
     "        min_marker = (int(mintab_df['sample'][peak_idx]), mintab_df['value'][peak_idx])\n",
     "        max_marker = (int(maxtab_df['sample'][peak_idx]), maxtab_df['value'][peak_idx])\n",
     "        markers_loc.append(min_marker)\n",
@@ -836,8 +826,8 @@
     "            biopac_data = biopac_mat['data']\n",
     "            # create the pandas dataframe\n",
     "            biopac_df = pd.DataFrame(biopac_data, columns = biopac_mat['labels'])\n",
-    "            targeted_biopac_df = biopac_df.drop(columns=['Blink', 'Corrugator', 'Zygomaticus', 'ECG', 'Self report',\n",
-    "                                                        'Startle', 'Open', 'Tone', 'Pulse', 'Shock'])\n",
+    "\n",
+    "            targeted_biopac_df = biopac_df[['SCR', 'Respiration', 'Event']]\n",
     "\n",
     "            time_now = pd.to_datetime(\"2000-1-1\")\n",
     "\n",
@@ -969,33 +959,28 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'biopac_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbiopac_df\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'biopac_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "biopac_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c28d6b282a4d4f0ca4d96b0096b25100",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Text(value='', description='String:', layout=Layout(width='350px'), placeholder='Paste t…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
