Fixed typo in code

--- a/EzyScore.ipynb
+++ b/EzyScore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3768ca30c9be495f89d0b7f534b655a9",
+       "model_id": "4ee2bed0d2d84040b9d38dd4164cb3ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -827,7 +827,7 @@
     "            # create the pandas dataframe\n",
     "            biopac_df = pd.DataFrame(biopac_data, columns = biopac_mat['labels'])\n",
     "\n",
-    "            targeted_biopac_df = biopac_df[['SCR', 'Respiration', 'Event']]\n",
+    "            targeted_biopac_df = biopac_df[['Skin conductance', 'Respiration', 'Event']]\n",
     "\n",
     "            time_now = pd.to_datetime(\"2000-1-1\")\n",
     "\n",
@@ -949,31 +949,6 @@
     ")\n",
     "\n",
     "interact(text_input_callback, participant_id=text_box);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'biopac_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbiopac_df\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'biopac_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "biopac_df"
    ]
   },
   {
