--- a/EzySCR.ipynb
+++ b/EzySCR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb651c72c8a74abfba3215606ff5c396",
+       "model_id": "66efd0848cf64181977f17711fddfc68",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1073,7 +1073,7 @@
     "                    sliced_dfs_list.append(sliced_df)\n",
     "                    sliced_df = sliced_dfs_list[0]\n",
     "\n",
-    "            elif program_type == 'Acknowledge':\n",
+    "            elif program_type == 'Acknowledge_Lipp':\n",
     "                labels_key = 'labels'\n",
     "                biopac_data = biopac_mat['data']\n",
     "                biopac_df = pd.DataFrame(biopac_data, columns = biopac_mat[labels_key])\n",
@@ -1112,6 +1112,101 @@
     "                # Detect default value and event signal\n",
     "                default_value = events.mode().iloc[0]\n",
     "                event_signal = 5 if default_value == 0 else 0\n",
+    "\n",
+    "                # Filter events based on the detected default value and event signal\n",
+    "                filtered_events = downsampled_df['Event'] == event_signal\n",
+    "                downsampled_df.insert(len(downsampled_df.columns), \"Event Filter\", filtered_events, True)\n",
+    "                \n",
+    "                # Create \"change\" column. This detects the change of values, i.e. when an event started\n",
+    "                downsampled_df[\"Event Change\"] = downsampled_df[\"Event Filter\"].shift() != downsampled_df[\"Event Filter\"]\n",
+    "\n",
+    "                # Set the first value as False. As there is no event change. \n",
+    "                downsampled_df[\"Event Change\"].iloc[0] = False\n",
+    "\n",
+    "                event_change_idx =  downsampled_df.index[downsampled_df['Event Change']].tolist()\n",
+    "\n",
+    "                chunks_list = []\n",
+    "                num_events = int((len(event_change_idx)) / 2)\n",
+    "                #print(num_events)\n",
+    "\n",
+    "                for k in range(num_events):\n",
+    "                    if k == 0:\n",
+    "                        first_value = k\n",
+    "                        second_value = first_value + 1\n",
+    "                        chunks_list.append([event_change_idx[first_value], event_change_idx[second_value]])\n",
+    "                    else:\n",
+    "                        first_value = second_value + 1\n",
+    "                        second_value = first_value + 1\n",
+    "                        chunks_list.append([event_change_idx[first_value], event_change_idx[second_value]])\n",
+    "\n",
+    "                chunks_df = pd.DataFrame(chunks_list, columns=['Event_start', 'Event_end'])\n",
+    "                #print(chunks_df)\n",
+    "\n",
+    "                # Create different subsets related to events\n",
+    "                sliced_dfs_list = []\n",
+    "                if os.path.exists('./csv_data/' + filename):\n",
+    "                    pass\n",
+    "\n",
+    "                else:\n",
+    "                    os.mkdir('./csv_data/' + filename)\n",
+    "\n",
+    "                for event_number in range(len(chunks_df)):\n",
+    "                    event_timestamps = chunks_df.iloc[event_number]\n",
+    "                    event_offset_in_timedelta_str = pd.Timedelta(event_timestamps[1] - event_timestamps[0])\n",
+    "                    event_offset_in_timedelta = round(event_offset_in_timedelta_str.total_seconds()) \n",
+    "                    annotation_window_end_int_var = annotation_end_window_var - event_offset_in_timedelta\n",
+    "                    annotation_window_end_offset = str(annotation_window_end_int_var) + 's'\n",
+    "                    annotation_window_start_offset_str = str(ANNOTATION_WINDOW_START_OFFSET_INT) + 's'\n",
+    "                    annotation_start = event_timestamps[0] - pd.to_timedelta(annotation_window_start_offset_str)\n",
+    "                    annotation_end = event_timestamps[1] + pd.to_timedelta(annotation_window_end_offset) - pd.to_timedelta(annotation_window_start_offset_str)\n",
+    "\n",
+    "                    sliced_df = downsampled_df[annotation_start:annotation_end]\n",
+    "                    sliced_df = sliced_df.reset_index()\n",
+    "                    sliced_df = sliced_df.drop(columns=['Event Filter','Event Change'])\n",
+    "\n",
+    "                    sliced_df.to_csv('./csv_data/{}/event_number_{}.csv'.format(filename,event_number+1), index=False)    \n",
+    "                    sliced_dfs_list.append(sliced_df)\n",
+    "                    sliced_df = sliced_dfs_list[0]\n",
+    "                    \n",
+    "            elif program_type == 'Acknowledge_Mayo':\n",
+    "                labels_key = 'labels'\n",
+    "                biopac_data = biopac_mat['data']\n",
+    "                biopac_df = pd.DataFrame(biopac_data, columns = biopac_mat[labels_key])\n",
+    "                targeted_biopac_df = biopac_df[variables_array]\n",
+    "                time_now = pd.to_datetime(\"2000-1-1\")\n",
+    "\n",
+    "                timestamps_df = []\n",
+    "                timestamps_df.append(time_now)\n",
+    "                \n",
+    "                for i in range(1, biopac_df.shape[0]):\n",
+    "                    time_now = time_now + pd.to_timedelta(f'{OLD_RATE_RATIO}ms')\n",
+    "                    timestamps_df.append(time_now)\n",
+    "\n",
+    "                # insert the timestamps to the dataframe\n",
+    "                targeted_biopac_df.insert(0, \"Timestamp\", timestamps_df, True)\n",
+    "                ts_targeted_biopac_df = targeted_biopac_df.set_index('Timestamp')\n",
+    "                #print('Ratio: ')\n",
+    "                #print(OLD_RATE_RATIO)\n",
+    "                #print(ts_targeted_biopac_df)\n",
+    "\n",
+    "                # Down sampling data\n",
+    "                # L means milliseconds -> formula 1/SAMPLE_RATE = \"xL\"\n",
+    "                # 1/50Hz = 0.02 = \"20L\"\n",
+    "                resample_string = f\"{int(ONE_SECOND_IN_MS/sample_rate_hz)}L\"\n",
+    "                downsampled_df = pd.DataFrame()\n",
+    "\n",
+    "                if not resp_var_flag == '':\n",
+    "                    downsampled_df['Skin conductance'] = ts_targeted_biopac_df[variables_array[0]].resample(resample_string).mean()\n",
+    "                    downsampled_df['Respiration'] = ts_targeted_biopac_df[variables_array[1]].resample(resample_string).mean()    \n",
+    "                    downsampled_df['Event'] = ts_targeted_biopac_df[variables_array[2]].resample(resample_string).mean()\n",
+    "                else:\n",
+    "                    downsampled_df['Skin conductance'] = ts_targeted_biopac_df[variables_array[0]].resample(resample_string).mean()    \n",
+    "                    downsampled_df['Event'] = ts_targeted_biopac_df[variables_array[1]].resample(resample_string).mean()\n",
+    "\n",
+    "                events = downsampled_df['Event']\n",
+    "\n",
+    "                # Detect event signal for \"Acknowledge_Mayo\" as anything except 0\n",
+    "                event_signal = events != 0\n",
     "\n",
     "                # Filter events based on the detected default value and event signal\n",
     "                filtered_events = downsampled_df['Event'] == event_signal\n",
@@ -1217,8 +1312,8 @@
     "\n",
     "# Dropdown menu for selecting program type\n",
     "program_type_dropdown = widgets.Dropdown(\n",
-    "    options=['LabChart', 'Acknowledge'],\n",
-    "    value='Acknowledge',\n",
+    "    options=['LabChart', 'Acknowledge_Lipp', 'Acknowledge_Mayo'],\n",
+    "    value='Acknowledge_Lipp',\n",
     "    description='Program Type:',\n",
     "    disabled=False\n",
     ")\n",
